--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.html
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.html
@@ -6,7 +6,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
+<h1>hola </h1>
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
