--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.html
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.html
@@ -7,6 +7,7 @@
   </ion-toolbar>
 </ion-header>
 <h1>hola </h1>
+<h1>cabana connect </h1>
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
