cambio del boton de inicio

--- a/cabaniaConnect/src/app/app.component.html
+++ b/cabaniaConnect/src/app/app.component.html
@@ -2,7 +2,12 @@
   <ion-menu  menuId="main-menu" content-id="main">
     <ion-header>
       <ion-toolbar>
-        <ion-title>Inicio</ion-title>
+
+        <ion-item routerLink="inicio">
+         
+          <ion-label> inicio</ion-label>
+        </ion-item>
+
       </ion-toolbar>
     </ion-header>
     <ion-content>
