--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.html
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.html
@@ -6,8 +6,9 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<h1>hola </h1>
+
 <h1>cabana connect </h1>
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
@@ -15,3 +16,75 @@
     </ion-toolbar>
   </ion-header>
 </ion-content>
+
+<ion-header>
+  <ion-toolbar>
+  
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Titulo de la Tarjeta</ion-card-title>
+      </ion-card-header>
+      
+      <ion-card-content>
+        Contenido de la tarjeta. Esto puede ser texto, imágenes, botones, etc.
+      </ion-card-content>
+    </ion-card>
+
+  </ion-toolbar>
+</ion-header>
+<p></p>
+
+  <ion-header>
+    <ion-toolbar>
+    
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Titulo de la Tarjeta</ion-card-title>
+        </ion-card-header>
+        
+        <ion-card-content>
+          Contenido de la tarjeta. Esto puede ser texto, imágenes, botones, etc.
+        </ion-card-content>
+      </ion-card>
+  
+    </ion-toolbar>
+  </ion-header>
+  
+  <p></p>
+
+  <ion-header>
+    <ion-toolbar>
+    
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Titulo de la Tarjeta</ion-card-title>
+        </ion-card-header>
+        
+        <ion-card-content>
+          Contenido de la tarjeta. Esto puede ser texto, imágenes, botones, etc.
+        </ion-card-content>
+      </ion-card>
+  
+    </ion-toolbar>
+  </ion-header>
+  
+  <p></p>
+
+  <ion-header>
+    <ion-toolbar>
+    
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Titulo de la Tarjeta</ion-card-title>
+        </ion-card-header>
+        
+        <ion-card-content>
+          Contenido de la tarjeta. Esto puede ser texto, imágenes, botones, etc.
+        </ion-card-content>
+      </ion-card>
+  
+    </ion-toolbar>
+  </ion-header>
+  
+
+
