--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.html
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.html
@@ -19,72 +19,20 @@
 
 <ion-header>
   <ion-toolbar>
-  
     <ion-card>
+      <img alt="Silhouette of mountains" src="../assets/cabanias/kamehouse.jpg" />
       <ion-card-header>
-        <ion-card-title>Titulo de la Tarjeta</ion-card-title>
+        <ion-card-title>Cabaña kamehouse</ion-card-title>
+        <ion-card-subtitle>Cabaña en isla privada</ion-card-subtitle>
+        <ion-card-subtitle>Valor:$300.000 el Dia</ion-card-subtitle>
       </ion-card-header>
-      
       <ion-card-content>
-        Contenido de la tarjeta. Esto puede ser texto, imágenes, botones, etc.
+      Hermosa Cabaña ubicado en una isla privada con agradable clima y buena vista .la isla suele ser visitado por una tortuga.
       </ion-card-content>
+      <ion-button>reservar</ion-button>
     </ion-card>
+    
+    
 
   </ion-toolbar>
 </ion-header>
-<p></p>
-
-  <ion-header>
-    <ion-toolbar>
-    
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Titulo de la Tarjeta</ion-card-title>
-        </ion-card-header>
-        
-        <ion-card-content>
-          Contenido de la tarjeta. Esto puede ser texto, imágenes, botones, etc.
-        </ion-card-content>
-      </ion-card>
-  
-    </ion-toolbar>
-  </ion-header>
-  
-  <p></p>
-
-  <ion-header>
-    <ion-toolbar>
-    
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Titulo de la Tarjeta</ion-card-title>
-        </ion-card-header>
-        
-        <ion-card-content>
-          Contenido de la tarjeta. Esto puede ser texto, imágenes, botones, etc.
-        </ion-card-content>
-      </ion-card>
-  
-    </ion-toolbar>
-  </ion-header>
-  
-  <p></p>
-
-  <ion-header>
-    <ion-toolbar>
-    
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>Titulo de la Tarjeta</ion-card-title>
-        </ion-card-header>
-        
-        <ion-card-content>
-          Contenido de la tarjeta. Esto puede ser texto, imágenes, botones, etc.
-        </ion-card-content>
-      </ion-card>
-  
-    </ion-toolbar>
-  </ion-header>
-  
-
-
