canbio de cabanias y inicio

--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.html
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.html
@@ -1,38 +1,122 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="success">
-    <ion-title >cabania</ion-title>
-    <ion-buttons slot="start">
-      <ion-menu-button menu="main-menu"></ion-menu-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+ 
 
-<h1>cabana connect </h1>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">cabania</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header [translucent]="true">
+      <ion-toolbar color="success">
+        <ion-title >cabania</ion-title>
+        <ion-buttons slot="start">
+          <ion-menu-button menu="main-menu"></ion-menu-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    
+    <h1>cabana connect </h1>
+    
+    <ion-content [fullscreen]="true">
+      <ion-header collapse="condense">
+        <ion-toolbar>
+          <ion-title size="large">cabania</ion-title>
+        </ion-toolbar>
+      </ion-header>
+  
+
+<div contaonerbody>
+  
+  
+    <div class="containercard">
+      <ion-grid>
+        <div class="card">
+        <ion-row>
+          <ion-col>
+            <ion-card >
+              <ion-card-header>
+                <ion-card-title class="titulo_cards">kamehouse</ion-card-title>
+                <ion-row>
+                <ion-col><img class="edit" src="../assets/cabanias/kamehouse.jpg"  alt="imagen de editar"></ion-col>  
+                
+              </ion-row>
+              
+              </ion-card-header>
+            
+              <ion-button >reservar</ion-button>
+              <ion-col>$120.000 la noche</ion-col>
+              <ion-card-content>
+              Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+              </ion-card-content>
+              </ion-card>
+          </ion-col>
+           <!------------------------------------------------------------------------>
+          <ion-col>
+            <ion-card >
+            <ion-card-header>
+              <ion-card-title class="titulo_cards">cabaña morada</ion-card-title>
+              <ion-row>
+              <ion-col><img class="edit" src="../assets/cabanias/cabania_morada.jpg"  alt="imagen de editar"></ion-col>  
+            
+            </ion-row>
+            </ion-card-header>
+          
+            <ion-button >reservar</ion-button>
+            <ion-col>$120.000 la noche</ion-col>
+            <ion-card-content>
+            Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+            </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </div>  
+    </ion-grid>
+      <ion-grid>
+        <div class="card">
+           <!------------------------------------------------------------------------>
+        <ion-row>
+          <ion-col>
+            <ion-card >
+              <ion-card-header>
+                <ion-card-title class="titulo_cards" >cabaña cafe</ion-card-title>
+                <ion-row>
+                <ion-col><img class="edit" src="../assets/cabanias/cabania _cafe.jpg"  alt="imagen de editar"></ion-col>  
+                
+              </ion-row> 
+              </ion-card-header>
+              <ion-button>reservar</ion-button>
+              <ion-col>$120.000 la noche</ion-col>
+              <ion-card-content>
+              Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+              </ion-card-content>
+              </ion-card>
+          </ion-col>
+          <!------------------------------------------------------------------------>
+          <ion-col>
+            <ion-card >
+            <ion-card-header>
+              <ion-card-title class="titulo_cards">Cabaña azul</ion-card-title>
+              <ion-row>
+              <ion-col><img class="edit" src="../assets/cabanias/cabania_azul.jpg"  alt="imagen de editar"></ion-col>  
+             
+            </ion-row>
+           
+            </ion-card-header>
+            <ion-button >reservar</ion-button>
+              <ion-col>$120.000 la noche</ion-col>
+              <ion-card-content>
+              Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+         <!------------------------------------------------------------------------>
+    </div>  
+    </ion-grid>
+  </div>
+</div>   
+
+
+
+
+
+
 </ion-content>
 
-<ion-header>
-  <ion-toolbar>
-    <ion-card>
-      <img alt="Silhouette of mountains" src="../assets/cabanias/kamehouse.jpg" />
-      <ion-card-header>
-        <ion-card-title>Cabaña kamehouse</ion-card-title>
-        <ion-card-subtitle>Cabaña en isla privada</ion-card-subtitle>
-        <ion-card-subtitle>Valor:$300.000 el Dia</ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content>
-      Hermosa Cabaña ubicado en una isla privada con agradable clima y buena vista .la isla suele ser visitado por una tortuga.
-      </ion-card-content>
-      <ion-button>reservar</ion-button>
-    </ion-card>
-    
-    
 
-  </ion-toolbar>
-</ion-header>
+    
