--- a/cabaniaConnect/src/app/inicio/inicio.page.html
+++ b/cabaniaConnect/src/app/inicio/inicio.page.html
@@ -1,10 +1,124 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      home
-    </ion-title>
+<ion-header [translucent]="true">
+  <ion-toolbar color="success">
+    <ion-title >INICIO</ion-title>
+    <ion-icon name="cart-outline" slot="end"></ion-icon>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">cabania</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  
+
+<div contaonerbody>
+
+
+<div class="containercard">
+  <ion-grid>
+    <div class="card">
+    <ion-row>
+      <ion-col>
+        <ion-card >
+          <ion-card-header>
+            <ion-card-title class="titulo_cards">kamehouse</ion-card-title>
+            <ion-row>
+            <ion-col><img class="edit" src="../assets/cabanias/kamehouse.jpg"  alt="imagen de editar"></ion-col>  
+            
+          </ion-row>
+          
+          </ion-card-header>
+        
+          <ion-button >reservar</ion-button>
+          <ion-col>$120.000 la noche</ion-col>
+          <ion-card-content>
+          Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+          </ion-card-content>
+          </ion-card>
+      </ion-col>
+       <!------------------------------------------------------------------------>
+      <ion-col>
+        <ion-card >
+        <ion-card-header>
+          <ion-card-title class="titulo_cards">cabaña morada</ion-card-title>
+          <ion-row>
+          <ion-col><img class="edit" src="../assets/cabanias/cabanias_blanca.jpg"  alt="imagen de editar"></ion-col>  
+        
+        </ion-row>
+        </ion-card-header>
+      
+        <ion-button >reservar</ion-button>
+        <ion-col>$140.000 la noche</ion-col>
+        <ion-card-content>
+        Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+        </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </div>  
+</ion-grid>
+  <ion-grid>
+    <div class="card">
+       <!------------------------------------------------------------------------>
+    <ion-row>
+      <ion-col>
+        <ion-card >
+          <ion-card-header>
+            <ion-card-title class="titulo_cards" >cabaña verde</ion-card-title>
+            <ion-row>
+            <ion-col><img class="edit" src="../assets/cabanias/cabania_verde.jpg"  alt="imagen de editar"></ion-col>  
+            
+          </ion-row> 
+          </ion-card-header>
+          <ion-button>reservar</ion-button>
+          <ion-col>$120.000 la noche</ion-col>
+          <ion-card-content>
+          Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+          </ion-card-content>
+          </ion-card>
+      </ion-col>
+      <!------------------------------------------------------------------------>
+      <ion-col>
+        <ion-card >
+        <ion-card-header>
+          <ion-card-title class="titulo_cards">Cabaña azul</ion-card-title>
+          <ion-row>
+          <ion-col><img class="edit" src="../assets/cabanias/cabania_azul.jpg"  alt="imagen de editar"></ion-col>  
+         
+        </ion-row>
+       
+        </ion-card-header>
+        <ion-button >reservar</ion-button>
+          <ion-col>$120.000 la noche</ion-col>
+          <ion-card-content>
+          Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+     <!------------------------------------------------------------------------>
+</div>  
+</ion-grid>
+</div>
+</div>   
+
+
+
+
+
+
+</ion-content>
+
+
+
+
+
+
+
+
