--- a/cabaniaConnect/src/app/login/login.page.html
+++ b/cabaniaConnect/src/app/login/login.page.html
@@ -1,29 +1,31 @@
 <ion-header >
   <ion-toolbar color="primary">
-    <ion-title>Login</ion-title>
+    <ion-title>Bienvenido</ion-title>
   </ion-toolbar>
 </ion-header>
+
+<img src="assets/cabanias/cabanaconnect.png" alt="Descripción de la imagen">
 
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>LOGIN</ion-card-title>
+      <ion-card-title>Inicio de sesión</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="formularioLogin">
         <ion-item>
-          <ion-label position="floating" >nombre</ion-label>
+          <ion-label position="floating" >Nombre</ion-label>
           <ion-input formControlName="nombres"></ion-input>
         </ion-item>
     
         <ion-item>
-          <ion-label position="floating" >contraseña</ion-label>
+          <ion-label position="floating" >Contraseña</ion-label>
           <ion-input formControlName="password" type="password"></ion-input>
         </ion-item>
     
       </form>
       <br>
-      <ion-button (click)="ingresar()">ingresar</ion-button>
+      <ion-button (click)="ingresar()">Ingresar</ion-button>
       
 
     </ion-card-content>
@@ -35,7 +37,7 @@
     <ion-toolbar color="primary">
       <ion-buttons slot="end">
         <ion-button [routerLink]="['/registro']">
-          registrarse
+          Registrarse
         </ion-button>
       </ion-buttons>
     </ion-toolbar>
