--- a/cabaniaConnect/src/app/app.component.html
+++ b/cabaniaConnect/src/app/app.component.html
@@ -14,10 +14,10 @@
       <div class="menu-header-bg"></div>
       <div class="header-content">
 
-        <img src="../assets/icon/favicon.png" alt="">
+        <img src="../assets/cabanias/user.png" alt="">
         <ion-label>
-          <h2>Sr.carlo</h2>
-          <p>correo</p>
+          <h2>Sr.Carlo Anfossi</h2>
+          <p>Correo:carlos.anfossi@duocuc.cl</p>
         </ion-label>
 
       </div>
