--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.html
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.html
@@ -3,7 +3,7 @@
 
     <ion-header [translucent]="true">
       <ion-toolbar color="success">
-        <ion-title >cabania</ion-title>
+        <ion-title >Cabañas</ion-title>
         <ion-buttons slot="start">
           <ion-menu-button menu="main-menu"></ion-menu-button>
         </ion-buttons>
@@ -15,7 +15,7 @@
     <ion-content [fullscreen]="true">
       <ion-header collapse="condense">
         <ion-toolbar>
-          <ion-title size="large">cabania</ion-title>
+          <ion-title size="large">cabañas</ion-title>
         </ion-toolbar>
       </ion-header>
   
