--- a/cabaniaConnect/src/app/app.component.html
+++ b/cabaniaConnect/src/app/app.component.html
@@ -5,7 +5,7 @@
 
         <ion-item routerLink="inicio">
          
-          <ion-label> inicio</ion-label>
+          <ion-label> Inicio</ion-label>
         </ion-item>
 
       </ion-toolbar>
@@ -23,7 +23,7 @@
       </div>
         <div class="action-button">
           <ion-button>
-            <ion-icon slot="start" name ="add"></ion-icon> mis reserva
+            <ion-icon slot="start" name ="add"></ion-icon> Mis reserva
             </ion-button>
         </div>
 
@@ -32,7 +32,7 @@
         <ion-menu-toggle>
           <ion-item routerLink="pages/perfil">
             <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-            <ion-label> perfil</ion-label>
+            <ion-label> Perfil</ion-label>
           </ion-item>
         </ion-menu-toggle>
       
@@ -44,17 +44,17 @@
 
         <ion-item routerLink="pages/cabania">
           <ion-icon name="home"slot="start"></ion-icon>
-          <ion-label>cabañas</ion-label>
+          <ion-label>Cabañas</ion-label>
         </ion-item>
 
         <ion-item routerLink="pages/oferta-cabania">
           <ion-icon name="home"slot="start"></ion-icon>
-          <ion-label>oferta de cabaña</ion-label>
+          <ion-label>Oferta de cabaña</ion-label>
         </ion-item>
 
         <ion-item>
           <ion-icon name="construct-outline" slot="start"></ion-icon>
-          <ion-label>configuracion</ion-label>
+          <ion-label>Configuración</ion-label>
         </ion-item>
 
 
