--- a/cabaniaConnect/src/app/app.component.scss
+++ b/cabaniaConnect/src/app/app.component.scss
@@ -51,7 +51,7 @@
     ion-button{
         text-transform: capitalize;
         font-weight:300;
-        --background:#628cff;
+        --background:#2fdf75;
         --border-radius:7px;
         --box-shadow:none;
 
