perfil y reserva nueva

--- a/cabaniaConnect/src/app/pages/perfil/perfil.page.html
+++ b/cabaniaConnect/src/app/pages/perfil/perfil.page.html
@@ -23,38 +23,15 @@
       <ion-list>
         <ion-item>
           <ion-label>Nombre:</ion-label>
-          <ion-text>Jane Doe</ion-text>
+          <ion-text>Carlo Anfossi</ion-text>
         </ion-item>
         <ion-item>
           <ion-label>Correo Electrónico:</ion-label>
-          <ion-text>jane.doe@example.com</ion-text>
+          <ion-text>Carlo.anfossi@duocuc.cl</ion-text>
         </ion-item>
         <ion-item>
           <ion-label>Teléfono:</ion-label>
           <ion-text>(123) 456-7890</ion-text>
-        </ion-item>
-      </ion-list>
-    </ion-card-content>
-  </ion-card>
-
-  <!-- Reservas de cabañas ficticias -->
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Reservas de Cabañas</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-list>
-        <ion-item>
-          <ion-label>Fecha de Check-In:</ion-label>
-          <ion-text>15 de octubre de 2023</ion-text>
-        </ion-item>
-        <ion-item>
-          <ion-label>Fecha de Check-Out:</ion-label>
-          <ion-text>18 de octubre de 2023</ion-text>
-        </ion-item>
-        <ion-item>
-          <ion-label>Cabaña Reservada:</ion-label>
-          <ion-text>Cabaña Acogedora en el Bosque</ion-text>
         </ion-item>
       </ion-list>
     </ion-card-content>
