--- a/cabaniaConnect/src/app/pages/reserva/reserva.page.html
+++ b/cabaniaConnect/src/app/pages/reserva/reserva.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="primary">
-    <ion-title>reserva</ion-title>
+  <ion-toolbar color="tertiary">
+    <ion-title>Reserva</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
@@ -10,7 +10,70 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">reserva</ion-title>
+      <ion-title size="large">Perfil</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <!-- Información del usuario ficticio -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Información Personal</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label>Nombre:</ion-label>
+          <ion-text>Carlo Anfossi</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Correo Electrónico:</ion-label>
+          <ion-text>Carlo.anfossi@duocuc.cl</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Teléfono:</ion-label>
+          <ion-text>(123) 456-7890</ion-text>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Reservas de cabañas ficticias con más detalles -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Reservas Cabañas</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label>Fecha de Check-In:</ion-label>
+          <ion-text>15 de octubre de 2023</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Fecha de Check-Out:</ion-label>
+          <ion-text>18 de octubre de 2023</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Cabaña Reservada:</ion-label>
+          <ion-text>Cabaña Morada</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Número de Adultos:</ion-label>
+          <ion-text>2 adultos</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Número de Niños:</ion-label>
+          <ion-text>1 niño</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Servicios Adicionales:</ion-label>
+          <ion-text>Piscina privada, Desayuno incluido</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Precio Total:</ion-label>
+          <ion-text>$300</ion-text>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
