--- a/cabaniaConnect/src/app/pages/oferta-cabania/oferta-cabania.page.html
+++ b/cabaniaConnect/src/app/pages/oferta-cabania/oferta-cabania.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-title>Oferta Cabania</ion-title>
+    <ion-title>Ofertas de Cabañas</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
@@ -10,7 +10,91 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Oferta Cabania</ion-title>
+      <ion-title size="large">Ofertas de Cabañas</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <!-- Oferta de Cabaña 1 -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Cabaña Acogedora en el Bosque</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label>Ubicación:</ion-label>
+          <ion-text>Cerca de tu ubicación</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Capacidad:</ion-label>
+          <ion-text>4 personas</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Precio por noche:</ion-label>
+          <ion-text>$100</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Servicios incluidos:</ion-label>
+          <ion-text>Desayuno, Wi-Fi, Estacionamiento</ion-text>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Oferta de Cabaña 2 -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Cabaña Tranquila en el Lago</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label>Ubicación:</ion-label>
+          <ion-text>Cerca de un hermoso lago</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Capacidad:</ion-label>
+          <ion-text>6 personas</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Precio por noche:</ion-label>
+          <ion-text>$150</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Servicios incluidos:</ion-label>
+          <ion-text>Desayuno, Acceso al lago, Barbacoa</ion-text>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Oferta de Cabaña 3 -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Cabaña de Montaña Rústica</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label>Ubicación:</ion-label>
+          <ion-text>En las montañas</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Capacidad:</ion-label>
+          <ion-text>2 personas</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Precio por noche:</ion-label>
+          <ion-text>$80</ion-text>
+        </ion-item>
+        <ion-item>
+          <ion-label>Servicios incluidos:</ion-label>
+          <ion-text>Chimenea, Senderismo</ion-text>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
+
+
