cambio de inicio ahora puedes cerrar sesion

--- a/cabaniaConnect/src/app/inicio/inicio.page.html
+++ b/cabaniaConnect/src/app/inicio/inicio.page.html
@@ -3,6 +3,7 @@
     <ion-title >INICIO</ion-title>
     <ion-icon name="cart-outline" slot="end"></ion-icon>
     <ion-buttons slot="start">
+      <ion-item> <img class="out" src="assets/img/out.png" ><ion-button  (click)="presentAlert()"  class="cerrar"alt="end">cerrar sesion</ion-button></ion-item>
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
@@ -12,6 +13,7 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">cabania</ion-title>
+      
     </ion-toolbar>
   </ion-header>
 
