cambio de prueba

--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.html
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.html
@@ -59,7 +59,7 @@
             <ion-button >reservar</ion-button>
             <ion-col>$120.000 la noche</ion-col>
             <ion-card-content>
-            Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
+            Hermosa cabaña de color azul ubicado en la región de valparaiso .
             </ion-card-content>
             </ion-card>
           </ion-col>
