--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.html
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.html
@@ -20,98 +20,62 @@
       </ion-header>
   
 
-<div contaonerbody>
-  
-  
-    <div class="containercard">
-      <ion-grid>
-        <div class="card">
-        <ion-row>
-          <ion-col>
-            <ion-card >
-              <ion-card-header>
-                <ion-card-title class="titulo_cards">kamehouse</ion-card-title>
-                <ion-row>
-                <ion-col><img class="edit" src="../assets/cabanias/kamehouse.jpg"  alt="imagen de editar"></ion-col>  
-                
-              </ion-row>
-              
-              </ion-card-header>
-            
-              <ion-button >reservar</ion-button>
-              <ion-col>$120.000 la noche</ion-col>
-              <ion-card-content>
-              Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
-              </ion-card-content>
-              </ion-card>
-          </ion-col>
-           <!------------------------------------------------------------------------>
-          <ion-col>
-            <ion-card >
-            <ion-card-header>
-              <ion-card-title class="titulo_cards">cabaña morada</ion-card-title>
-              <ion-row>
-              <ion-col><img class="edit" src="../assets/cabanias/cabania_morada.jpg"  alt="imagen de editar"></ion-col>  
-            
-            </ion-row>
-            </ion-card-header>
-          
-            <ion-button >reservar</ion-button>
-            <ion-col>$120.000 la noche</ion-col>
-            <ion-card-content>
-            Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
-            </ion-card-content>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-      </div>  
-    </ion-grid>
-      <ion-grid>
-        <div class="card">
-           <!------------------------------------------------------------------------>
-        <ion-row>
-          <ion-col>
-            <ion-card >
-              <ion-card-header>
-                <ion-card-title class="titulo_cards" >cabaña cafe</ion-card-title>
-                <ion-row>
-                <ion-col><img class="edit" src="../assets/cabanias/cabania _cafe.jpg"  alt="imagen de editar"></ion-col>  
-                
-              </ion-row> 
-              </ion-card-header>
-              <ion-button>reservar</ion-button>
-              <ion-col>$120.000 la noche</ion-col>
-              <ion-card-content>
-              Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
-              </ion-card-content>
-              </ion-card>
-          </ion-col>
-          <!------------------------------------------------------------------------>
-          <ion-col>
-            <ion-card >
-            <ion-card-header>
-              <ion-card-title class="titulo_cards">Cabaña azul</ion-card-title>
-              <ion-row>
-              <ion-col><img class="edit" src="../assets/cabanias/cabania_azul.jpg"  alt="imagen de editar"></ion-col>  
-             
-            </ion-row>
-           
-            </ion-card-header>
-            <ion-button >reservar</ion-button>
-              <ion-col>$120.000 la noche</ion-col>
-              <ion-card-content>
-              Hermosa cabaña de color azul ubicado en la comuna de valparaiso .
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-         <!------------------------------------------------------------------------>
-    </div>  
-    </ion-grid>
-  </div>
-</div>   
+<!---------------------------------------------------------------------------------------->
 
+      <ion-card>
+        <img alt="Silhouette of mountains" src="assets/cabanias/cabania_azul.jpg" />
+        <ion-card-header>
+          <ion-card-title>cabanias azul</ion-card-title>
+          <ion-card-subtitle>$140.000 la noche</ion-card-subtitle>
+          <ion-button >reservar</ion-button>
+        </ion-card-header>
+      
+        <ion-card-content>
+          hermosa cabaña ubicado en la serene 5 region
+        </ion-card-content>
+      </ion-card>
+<!---------------------------------------------------------------------------------------->
 
+<ion-card>
+  <img alt="Silhouette of mountains" src="assets/cabanias/cabania _cafe.jpg" />
+  <ion-card-header>
+    <ion-card-title>cabanias cafe</ion-card-title>
+    <ion-card-subtitle>$130.000 la noche</ion-card-subtitle>
+    <ion-button >reservar</ion-button>
+  </ion-card-header>
+
+  <ion-card-content>
+    hermosa cabaña ubicado en la serene 5 region
+  </ion-card-content>
+</ion-card>
+<!---------------------------------------------------------------------------------------->
+
+<ion-card>
+  <img alt="Silhouette of mountains" src="assets/cabanias/cabania_morada.jpg" />
+  <ion-card-header>
+    <ion-card-title>cabanias morado</ion-card-title>
+    <ion-card-subtitle>$100.000 la noche</ion-card-subtitle>
+    <ion-button >reservar</ion-button>
+  </ion-card-header>
+
+  <ion-card-content>
+    hermosa cabaña ubicado en la serene 5 region
+  </ion-card-content>
+</ion-card>
+<!---------------------------------------------------------------------------------------->
+
+<ion-card>
+  <img alt="Silhouette of mountains" src="assets/cabanias/cabania_verde.jpg" />
+  <ion-card-header>
+    <ion-card-title>cabanias verde</ion-card-title>
+    <ion-card-subtitle>$120.000 la noche</ion-card-subtitle>
+    <ion-button >reservar</ion-button>
+  </ion-card-header>
+
+  <ion-card-content>
+    hermosa cabaña ubicado en la serene 5 region
+  </ion-card-content>
+</ion-card>
 
 
 
