--- a/cabaniaConnect/src/app/pages/cabania/cabania.page.scss
+++ b/cabaniaConnect/src/app/pages/cabania/cabania.page.scss
@@ -4,13 +4,10 @@
     color:white;
 }
 
-ion-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centra horizontalmente */
-    justify-content: center; /* Centra verticalmente */
-    height: 100%; /* Asegura que la tarjeta ocupe toda la altura disponible */
-  }
+.ion-card {
+  width: 200px;
+  height: 300px;
+}
   
   ion-card-content {
     text-align: center; /* Centra el contenido del card horizontalmente */
