--- a/cabaniaConnect/src/app/app.component.html
+++ b/cabaniaConnect/src/app/app.component.html
@@ -16,7 +16,7 @@
 
         <img src="../assets/cabanias/user.png" alt="">
         <ion-label>
-          <h2>Sr.Carlo Anfossi</h2>
+          <h2> nombre:{{userName}}</h2>
           <p>Correo:carlos.anfossi@duocuc.cl</p>
         </ion-label>
 
