--- a/cabaniaConnect/src/app/registro/registro.page.html
+++ b/cabaniaConnect/src/app/registro/registro.page.html
@@ -16,7 +16,7 @@
       <form [formGroup]="formularioRegistro" (keyup.enter)="guardar()">
         <ion-item>
           <ion-label position="floating" >nombre</ion-label>
-          <ion-input formControlName="nombres"></ion-input>
+          <ion-input formControlName="username"></ion-input>
         </ion-item>
 
        
@@ -27,7 +27,7 @@
 		
 		 <ion-item>
           <ion-label position="floating" >correo</ion-label>
-          <ion-input formControlName="correo"></ion-input>
+          <ion-input formControlName="email"></ion-input>
         </ion-item>
        
         
