--- a/cabaniaConnect/src/app/login/login.page.html
+++ b/cabaniaConnect/src/app/login/login.page.html
@@ -17,7 +17,7 @@
       <form [formGroup]="formularioLogin">
         <ion-item>
           <ion-label position="floating" >Nombre</ion-label>
-          <ion-input formControlName="username"></ion-input>
+          <ion-input formControlName="userName" name="userName"></ion-input>
         </ion-item>
     
         <ion-item>
