se creo la reserva de cabanias

--- a/cabaniaConnect/src/app/inicio/inicio.page.html
+++ b/cabaniaConnect/src/app/inicio/inicio.page.html
@@ -29,7 +29,7 @@
           <ion-card-header>
             <ion-card-title>cabanias azul</ion-card-title>
             <ion-card-subtitle>$140.000 la noche</ion-card-subtitle>
-            <ion-button >reservar</ion-button>
+            <ion-button [routerLink]="['/pages/reserva']" id="btn-reserva">reservar</ion-button>
           </ion-card-header>
         
           <ion-card-content>
@@ -43,7 +43,7 @@
       <ion-card-header>
       <ion-card-title>cabanias cafe</ion-card-title>
       <ion-card-subtitle>$130.000 la noche</ion-card-subtitle>
-      <ion-button >reservar</ion-button>
+      <ion-button [routerLink]="['/pages/reserva']" id="btn-reserva">reservar</ion-button>
       </ion-card-header>
 
       <ion-card-content>
@@ -57,7 +57,7 @@
       <ion-card-header>
       <ion-card-title>cabanias morado</ion-card-title>
       <ion-card-subtitle>$100.000 la noche</ion-card-subtitle>
-      <ion-button >reservar</ion-button>
+      <ion-button [routerLink]="['/pages/reserva']" id="btn-reserva">reservar</ion-button>
       </ion-card-header>
 
       <ion-card-content>
@@ -71,7 +71,7 @@
       <ion-card-header>
       <ion-card-title>cabanias verde</ion-card-title>
       <ion-card-subtitle>$120.000 la noche</ion-card-subtitle>
-      <ion-button >reservar</ion-button>
+      <ion-button [routerLink]="['/pages/reserva']" id="btn-reserva">reservar</ion-button>
       </ion-card-header>
 
       <ion-card-content>
