cambios en el nombre de algunos label

--- a/cabaniaConnect/src/app/pages/reserva/reserva.page.html
+++ b/cabaniaConnect/src/app/pages/reserva/reserva.page.html
@@ -4,9 +4,13 @@
     <ion-button [routerLink]="['/inicio']" class="CancelarBoton">
       Cancelar
     </ion-button>
+
+
+    
     <ion-button [routerLink]="['/home-page']" class="AceptaBoton">
-      Guardar
+      reservar
     </ion-button>
+    
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
